# thesis-work

./: .gitignore
backend/: .env.example  ARCHITECTURE.md  DEPLOYMENT.md  Makefile  PROJECT_REPORT.md  QUICKSTART.md  README.md  agentic_crawler.py  dev.bat  main.py  project_architecture.md  pyproject.toml  requirements.txt
backend/reports/: Website_Analysis_20251206_192926_inf.unideb.hu_en.md  Website_Analysis_20251206_193602_inf.unideb.hu_en.md  Website_Analysis_20260329_215839_web-scraping.dev_products.md  Website_Analysis_20260413_174430_web-scraping.dev_products.md  Website_Analysis_20260413_184159_web-scraping.dev_products.md  Website_Analysis_20260413_191418_web-scraping.dev_products.md  Website_Analysis_20260413_192117_web-scraping.dev_products.md  Website_Analysis_20260413_192235_web-scraping.dev_products.md  Website_Analysis_20260413_193059_web-scraping.dev_products.md  Website_Analysis_20260413_193718_web-scraping.dev_products.md  Website_Analysis_20260413_194451_inf.unideb.hu_en.md  Website_Analysis_20260414_015348_web-scraping.dev_products.md  Website_Analysis_20260414_015713_web-scraping.dev_products.md
backend/src/agentic_crawler/: __init__.py  cli.py
backend/src/agentic_crawler/agents/: __init__.py  evaluation_agent.py  prompts.py
backend/src/agentic_crawler/config/: __init__.py  settings.py
backend/src/agentic_crawler/models/: __init__.py  execution.py  reports.py
backend/src/agentic_crawler/qa_reports/: QA_Report_20251104_091735_unknown.md
backend/src/agentic_crawler/services/: __init__.py  cache_service.py  chat_service.py  content_normalize.py  tracker_service.py
backend/src/agentic_crawler/utils/: __init__.py  (+3 more)
backend/src/tool_outputs/: 20260413_174430_firecrawl_map_web-scraping.dev_products.json  20260413_174430_firecrawl_scrape_web-scraping.dev_products.json  20260413_181143_firecrawl_map_web-scraping.dev_.json  20260413_181143_firecrawl_map_web-scraping.dev_products.json  20260413_181143_firecrawl_scrape_web-scraping.dev_products.json  20260413_181711_firecrawl_map_web-scraping.dev.json  20260413_181711_firecrawl_map_web-scraping.dev_products.json  20260413_181711_firecrawl_scrape_web-scraping.dev_products.json  20260413_182225_firecrawl_map_web-scraping.dev_products.json  20260413_182225_firecrawl_scrape_web-scraping.dev_products.json  20260413_184159_firecrawl_map_web-scraping.dev_.json  20260413_184159_firecrawl_map_web-scraping.dev_products.json  20260413_184159_firecrawl_scrape_web-scraping.dev_products.json
(+24 files in other folders)
